Part 1/1.12/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server-app-svc
spec:
  type: ClusterIP
  selector:
    app: web-server-app
  ports:
  - protocol: TCP
    port: 2345 
    targetPort: 3000
